--- a/style.css
+++ b/style.css
@@ -3,7 +3,52 @@
     src: url("fontchristmas.ttf");
 }
 
+body {
+    background-image: url(bg.jpg);
+    background-size: cover;
+    background-color: rgba(255, 255, 255, 0.2);
+    background-blend-mode: lighten;
+    font-family: "ChristmasFont";
+}
+
+button {
+    font-family: "ChristmasFont";
+    font-size: 1.4em;
+    padding: 0.5em;
+    margin-right: 0.5em;
+    margin-bottom: 0.5em;
+}
+
+div {
+    color: white;
+    margin-left: 32px;
+    margin-right: 55%;
+    text-align: left;
+}
+
+ul {
+    display: inline-block;
+    text-align: left;
+    margin-top: 0px;
+    padding-top: 0px;
+}
+
 h1 {
-    font-family: ChristmasFont;
-    text-align: center;
+    font-size: 2em;
+    margin-bottom: 16px;
+}
+
+h2 {
+    font-size: 1.7em;
+    margin-top: 4em;
+    margin-bottom: 0px;
+}
+
+h3 {
+    font-size: 1.5em;
+    margin-top: 1.2em;
+}
+
+p, li {
+    font-size: 1.4em;
 }
