--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@
 
 body {
     background-image: url(b.jpg);
-    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
     background-color: rgba(255, 255, 255, 0.1);
     background-blend-mode: darken;
     font-family: "ChristmasFont";
