--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     background-image: url(b.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: 100% 100%;
+    background-size: cover;
     background-color: rgba(255, 255, 255, 0.1);
     background-blend-mode: darken;
     font-family: "ChristmasFont";
