--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     background-color: rgba(255, 255, 255, 0.1);
     background-blend-mode: darken;
     font-family: "ChristmasFont";
-    text-shadow: -1px 0 red, 0 1px red, 1px 0 red, 0 -1px red;
+    text-shadow: -1px 0 rgba(220, 97, 9, 1), 0 1px rgba(220, 97, 9, 1), 1px 0 rgba(220, 97, 9, 1), 0 -1px rgba(220, 97, 9, 1);
 }
 
 button {
@@ -54,6 +54,7 @@ h1 {
     color: white;
     font-size: 2.6em;
     margin-bottom: 16px;
+    text-shadow: -1px 0 red, 0 1px red, 1px 0 red, 0 -1px red;
 }
 
 h2 {
