--- a/style.css
+++ b/style.css
@@ -1,30 +1,34 @@
 @font-face {
     font-family: "ChristmasFont";
-    src: url("allura.ttf");
+    src: url("nickainley.otf");
+}
+
+@font-face {
+    font-family: "PublicSans";
+    src: url("public-sans.ttf");
 }
 
 body {
-    background-image: url(b.jpg);
+    background-image: url(b2.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
     background-color: rgba(255, 255, 255, 0.1);
     background-blend-mode: darken;
     font-family: "ChristmasFont";
-    text-shadow: -1px 0 rgba(220, 97, 9, 1), 0 1px rgba(220, 97, 9, 1), 1px 0 rgba(220, 97, 9, 1), 0 -1px rgba(220, 97, 9, 1);
 }
 
 button {
-    font-family: "ChristmasFont";
-    font-size: 1.5em;
+    font-family: "PublicSans";
+    font-size: 1.2em;
     padding: 0.4em;
     margin-right: 0.5em;
     margin-bottom: 0.3em;
     border-width: 2px;
-    border-color: white;
+    border-color: black;
     border-radius: 8px;
-    color: white;
-    background-color: red;
+    color: black;
+    background-color: white;
 }
 
 div {
@@ -54,11 +58,10 @@ h1 {
     color: white;
     font-size: 2.6em;
     margin-bottom: 16px;
-    text-shadow: -1px 0 red, 0 1px red, 1px 0 red, 0 -1px red;
 }
 
 h2 {
-    font-size: 2.0em;
+    font-size: 2.6em;
     margin-top: 2em;
     margin-bottom: 0px;
 }
@@ -69,5 +72,6 @@ h3 {
 }
 
 p, li {
-    font-size: 1.8em;
+    font-family: "PublicSans";
+    font-size: 1.3em;
 }
